配置成只允许application module集成此插件

--- a/build.gradle
+++ b/build.gradle
@@ -6,13 +6,15 @@ buildscript {
         google()
         jcenter()
         maven{
-            url 'file:///home/jianglei/maven'
+            url LOCAL_MAVEN
         }
 
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
-        
+        classpath 'com.jianglei:asm-plugin:1.0'
+
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
