--- a/gradle.properties
+++ b/gradle.properties
@@ -12,4 +12,6 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+# 本地maven仓库地址，可以配置成自己的地址
+LOCAL_MAVEN = file:///home/jianglei/maven
 
