--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation project(':testlibrary')
-    implementation project(':secondlibrary')
+//    implementation project(':secondlibrary')
     testImplementation 'junit:junit:4.12'
     implementation "commons-io:commons-io:2.4"
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
