--- a/testlibrary/build.gradle
+++ b/testlibrary/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.library'
-
+apply plugin: 'com.jianglei.method-tracer'
 android {
     compileSdkVersion 28
 
@@ -26,6 +26,7 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
+    implementation 'com.jianglei:jllog:1.5'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'org.ow2.asm:asm-commons:5.1'
     testImplementation 'junit:junit:4.12'
