--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,5 @@
 apply plugin: 'com.android.application'
-//apply plugin: 'com.jianglei.method-tracer'
+apply plugin: 'com.jianglei.method-tracer'
 
 android {
     compileSdkVersion 28
@@ -30,6 +30,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
-//methodTrace{
-//    traceThirdLibrary = false
-//}
+methodTrace{
+    traceThirdLibrary = true
+}
